--- a/style.css
+++ b/style.css
@@ -19,3 +19,20 @@ h1 {
     color: white;
     margin-bottom: 5rem;
 }
+
+h2 {
+    font-size: 4.2rem;
+    margin-bottom: 4rem;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 80rem;
+    margin: 0 auto;
+    padding: 2rem;
+
+}
