--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@
     margin: 0;
     padding: 0;
     font-family: 'Permanent Marker', cursive;
-    font-size: 30px;
+    font-size: 75%;
 
 }
 
 h1 {
-    font-size: larger;
+    font-size: 3rem;
     font-weight: lighter;
     color: white;
     margin-bottom: 5rem;
@@ -34,5 +34,33 @@ h2 {
     max-width: 80rem;
     margin: 0 auto;
     padding: 2rem;
+
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-centre {
+    justify-content: center;
+    align-items: center;
+}
+
+.justify-centre {
+    justify-content: center;
+}
+
+.text-centre {
+    text-align: center;
+}
+
+.hidden {
+    display: none;
+}
+
+/* Main Game Menu Buttons */
+
+.btn {
 
 }
