--- a/style.css
+++ b/style.css
@@ -62,5 +62,14 @@ h2 {
 /* Main Game Menu Buttons */
 
 .btn {
+    font-size: 2rem;
+    padding: 1.5rem 0;
+    width: 30rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgb(230, 92, 50) 50%, rgb(248, 244, 203) 100%);
+    border-radius: 5px;
 
 }
